--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <h3 data-aos="zoom-in" data-aos-duration="1000" class="home__body-text__p">Your dreamed burger close to your locations!</h3>
                 <a data-aos="zoom-in" data-aos-duration="1000" class="home__body-text__btn" href="#ingredient">Discover the ingredients</a>
             </div>
-            <div class="home__body-img">
+            <div class="home__body-img parallax" value="5">
                 <img src="images/burger_img.png" alt="img">
             </div>
         </div>
